Heaps (#22)
* Separate package and interface for heaps

* Iterators refactored

* Iterator tests for AVL trees

* Abstract heap class

* Leftist heap

* Restore nodes classes in pairing heap

* Refactor structures tests

* Refactor structures tests

* Reorganize tests

* Adding whole set to disjoint sets

---------

Co-authored-by: R. Kaleta <rafkaleta@onet.pl>